Solutions for assignment 1 for Regression Week 2

--- a/Specializations/Machine Learning/Regression/Week 2/Assignment 1/week-2-multiple-regression-assignment-1-blank.ipynb
+++ b/Specializations/Machine Learning/Regression/Week 2/Assignment 1/week-2-multiple-regression-assignment-1-blank.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -50,12 +50,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[INFO] \u001b[1;32m1449959352 : INFO:     (initialize_globals_from_environment:282): Setting configuration variable GRAPHLAB_FILEIO_ALTERNATIVE_SSL_CERT_FILE to /Users/tjaskula/.graphlab/anaconda/lib/python2.7/site-packages/certifi/cacert.pem\n",
+      "\u001b[0m\u001b[1;32m1449959352 : INFO:     (initialize_globals_from_environment:282): Setting configuration variable GRAPHLAB_FILEIO_ALTERNATIVE_SSL_CERT_DIR to \n",
+      "\u001b[0mThis non-commercial license of GraphLab Create is assigned to thomasv1000@hotmail.fr and will expire on October 12, 2016. For commercial licensing options, visit https://dato.com/buy/.\n",
+      "\n",
+      "[INFO] Start server at: ipc:///tmp/graphlab_server-1601 - Server binary: /Users/tjaskula/.graphlab/anaconda/lib/python2.7/site-packages/graphlab/unity_server - Server log: /tmp/graphlab_server_1449959352.log\n",
+      "[INFO] GraphLab Server Version: 1.7.1\n"
+     ]
+    }
+   ],
    "source": [
     "sales = graphlab.SFrame('kc_house_data.gl/')"
    ]
@@ -70,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -98,11 +111,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PROGRESS: Linear regression:\n",
+      "PROGRESS: --------------------------------------------------------\n",
+      "PROGRESS: Number of examples          : 17384\n",
+      "PROGRESS: Number of features          : 3\n",
+      "PROGRESS: Number of unpacked features : 3\n",
+      "PROGRESS: Number of coefficients    : 4\n",
+      "PROGRESS: Starting Newton Method\n",
+      "PROGRESS: --------------------------------------------------------\n",
+      "PROGRESS: +-----------+----------+--------------+--------------------+---------------+\n",
+      "PROGRESS: | Iteration | Passes   | Elapsed Time | Training-max_error | Training-rmse |\n",
+      "PROGRESS: +-----------+----------+--------------+--------------------+---------------+\n",
+      "PROGRESS: | 1         | 2        | 1.046220     | 4146407.600631     | 258679.804477 |\n",
+      "PROGRESS: +-----------+----------+--------------+--------------------+---------------+\n",
+      "PROGRESS: SUCCESS: Optimal solution found.\n",
+      "PROGRESS:\n"
+     ]
+    }
+   ],
    "source": [
     "example_features = ['sqft_living', 'bedrooms', 'bathrooms']\n",
     "example_model = graphlab.linear_regression.create(train_data, target = 'price', features = example_features, \n",
@@ -118,11 +153,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------+-------+----------------+\n",
+      "|     name    | index |     value      |\n",
+      "+-------------+-------+----------------+\n",
+      "| (intercept) |  None | 87910.0724924  |\n",
+      "| sqft_living |  None | 315.403440552  |\n",
+      "|   bedrooms  |  None | -65080.2155528 |\n",
+      "|  bathrooms  |  None | 6944.02019265  |\n",
+      "+-------------+-------+----------------+\n",
+      "[4 rows x 3 columns]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "example_weight_summary = example_model.get(\"coefficients\")\n",
     "print example_weight_summary"
@@ -141,11 +193,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "271789.505878\n"
+     ]
+    }
+   ],
    "source": [
     "example_predictions = example_model.predict(train_data)\n",
     "print example_predictions[0] # should be 271789.505878"
@@ -167,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -175,11 +235,11 @@
    "source": [
     "def get_residual_sum_of_squares(model, data, outcome):\n",
     "    # First get the predictions\n",
-    "\n",
+    "    predictions = model.predict(data)\n",
     "    # Then compute the residuals/errors\n",
-    "\n",
+    "    residual_errors = outcome - predictions\n",
     "    # Then square and add them up\n",
-    "\n",
+    "    RSS = sum(residual_errors * residual_errors)\n",
     "    return(RSS)    "
    ]
   },
@@ -192,11 +252,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.7376153833e+14\n"
+     ]
+    }
+   ],
    "source": [
     "rss_example_train = get_residual_sum_of_squares(example_model, test_data, test_data['price'])\n",
     "print rss_example_train # should be 2.7376153833e+14"
@@ -225,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -248,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -260,14 +328,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# create the remaining 3 features in both TEST and TRAIN data\n",
-    "\n"
+    "train_data['bed_bath_rooms'] = train_data['bedrooms'] * train_data['bathrooms']\n",
+    "test_data['bed_bath_rooms'] = test_data['bedrooms'] * test_data['bathrooms']\n",
+    "\n",
+    "train_data['log_sqft_living'] = train_data['sqft_living'].apply(lambda x: log(x))\n",
+    "test_data['log_sqft_living'] = test_data['sqft_living'].apply(lambda x: log(x))\n",
+    "\n",
+    "train_data['lat_plus_long'] = train_data['lat'] + train_data['long']\n",
+    "test_data['lat_plus_long'] = test_data['lat'] + test_data['long']"
    ]
   },
   {
@@ -289,12 +364,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12.4466777016\n",
+      "7.50390163159\n",
+      "7.55027467965\n",
+      "-74.6533349722\n"
+     ]
+    }
+   ],
+   "source": [
+    "print test_data['bedrooms_squared'].mean()\n",
+    "print test_data['bed_bath_rooms'].mean()\n",
+    "print test_data['log_sqft_living'].mean()\n",
+    "print test_data['lat_plus_long'].mean()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -315,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -335,24 +426,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PROGRESS: Linear regression:\n",
+      "PROGRESS: --------------------------------------------------------\n",
+      "PROGRESS: Number of examples          : 17384\n",
+      "PROGRESS: Number of features          : 5\n",
+      "PROGRESS: Number of unpacked features : 5\n",
+      "PROGRESS: Number of coefficients    : 6\n",
+      "PROGRESS: Starting Newton Method\n",
+      "PROGRESS: --------------------------------------------------------\n",
+      "PROGRESS: +-----------+----------+--------------+--------------------+---------------+\n",
+      "PROGRESS: | Iteration | Passes   | Elapsed Time | Training-max_error | Training-rmse |\n",
+      "PROGRESS: +-----------+----------+--------------+--------------------+---------------+\n",
+      "PROGRESS: | 1         | 2        | 0.077517     | 4074878.213096     | 236378.596455 |\n",
+      "PROGRESS: +-----------+----------+--------------+--------------------+---------------+\n",
+      "PROGRESS: SUCCESS: Optimal solution found.\n",
+      "PROGRESS:\n",
+      "PROGRESS: Linear regression:\n",
+      "PROGRESS: --------------------------------------------------------\n",
+      "PROGRESS: Number of examples          : 17384\n",
+      "PROGRESS: Number of features          : 6\n",
+      "PROGRESS: Number of unpacked features : 6\n",
+      "PROGRESS: Number of coefficients    : 7\n",
+      "PROGRESS: Starting Newton Method\n",
+      "PROGRESS: --------------------------------------------------------\n",
+      "PROGRESS: +-----------+----------+--------------+--------------------+---------------+\n",
+      "PROGRESS: | Iteration | Passes   | Elapsed Time | Training-max_error | Training-rmse |\n",
+      "PROGRESS: +-----------+----------+--------------+--------------------+---------------+\n",
+      "PROGRESS: | 1         | 2        | 0.085886     | 4014170.932928     | 235190.935428 |\n",
+      "PROGRESS: +-----------+----------+--------------+--------------------+---------------+\n",
+      "PROGRESS: SUCCESS: Optimal solution found.\n",
+      "PROGRESS:\n",
+      "PROGRESS: Linear regression:\n",
+      "PROGRESS: --------------------------------------------------------\n",
+      "PROGRESS: Number of examples          : 17384\n",
+      "PROGRESS: Number of features          : 9\n",
+      "PROGRESS: Number of unpacked features : 9\n",
+      "PROGRESS: Number of coefficients    : 10\n",
+      "PROGRESS: Starting Newton Method\n",
+      "PROGRESS: --------------------------------------------------------\n",
+      "PROGRESS: +-----------+----------+--------------+--------------------+---------------+\n",
+      "PROGRESS: | Iteration | Passes   | Elapsed Time | Training-max_error | Training-rmse |\n",
+      "PROGRESS: +-----------+----------+--------------+--------------------+---------------+\n",
+      "PROGRESS: | 1         | 2        | 0.040755     | 3193229.177908     | 228200.043155 |\n",
+      "PROGRESS: +-----------+----------+--------------+--------------------+---------------+\n",
+      "PROGRESS: SUCCESS: Optimal solution found.\n",
+      "PROGRESS:\n"
+     ]
+    }
+   ],
    "source": [
-    "# Learn the three models: (don't forget to set validation_set = None)\n"
+    "# Learn the three models: (don't forget to set validation_set = None)\n",
+    "model_1 = graphlab.linear_regression.create(train_data, target = 'price', features = model_1_features, \n",
+    "                                                  validation_set = None)\n",
+    "model_2 = graphlab.linear_regression.create(train_data, target = 'price', features = model_2_features, \n",
+    "                                                  validation_set = None)\n",
+    "model_3 = graphlab.linear_regression.create(train_data, target = 'price', features = model_3_features, \n",
+    "                                                  validation_set = None)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------+-------+----------------+\n",
+      "|     name    | index |     value      |\n",
+      "+-------------+-------+----------------+\n",
+      "| (intercept) |  None | -56140675.7444 |\n",
+      "| sqft_living |  None | 310.263325778  |\n",
+      "|   bedrooms  |  None | -59577.1160683 |\n",
+      "|  bathrooms  |  None | 13811.8405419  |\n",
+      "|     lat     |  None | 629865.789485  |\n",
+      "|     long    |  None | -214790.285186 |\n",
+      "+-------------+-------+----------------+\n",
+      "[6 rows x 3 columns]\n",
+      "\n",
+      "+----------------+-------+----------------+\n",
+      "|      name      | index |     value      |\n",
+      "+----------------+-------+----------------+\n",
+      "|  (intercept)   |  None | -54410676.1152 |\n",
+      "|  sqft_living   |  None | 304.449298056  |\n",
+      "|    bedrooms    |  None | -116366.04323  |\n",
+      "|   bathrooms    |  None | -77972.3305131 |\n",
+      "|      lat       |  None | 625433.834953  |\n",
+      "|      long      |  None | -203958.602959 |\n",
+      "| bed_bath_rooms |  None | 26961.6249091  |\n",
+      "+----------------+-------+----------------+\n",
+      "[7 rows x 3 columns]\n",
+      "\n",
+      "+------------------+-------+----------------+\n",
+      "|       name       | index |     value      |\n",
+      "+------------------+-------+----------------+\n",
+      "|   (intercept)    |  None | -52974974.0598 |\n",
+      "|   sqft_living    |  None | 529.196420561  |\n",
+      "|     bedrooms     |  None | 28948.5277291  |\n",
+      "|    bathrooms     |  None | 65661.2072295  |\n",
+      "|       lat        |  None | 704762.148378  |\n",
+      "|       long       |  None | -137780.019966 |\n",
+      "|  bed_bath_rooms  |  None | -8478.36410481 |\n",
+      "| bedrooms_squared |  None | -6072.38466052 |\n",
+      "| log_sqft_living  |  None | -563467.78426  |\n",
+      "|  lat_plus_long   |  None | -83217.197896  |\n",
+      "+------------------+-------+----------------+\n",
+      "[10 rows x 3 columns]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# Examine/extract each model's coefficients:\n"
+    "# Examine/extract each model's coefficients:\n",
+    "model_1_summary = model_1.get(\"coefficients\")\n",
+    "print model_1_summary\n",
+    "\n",
+    "model_2_summary = model_2.get(\"coefficients\")\n",
+    "print model_2_summary\n",
+    "\n",
+    "model_3_summary = model_3.get(\"coefficients\")\n",
+    "print model_3_summary"
    ]
   },
   {
@@ -384,13 +589,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.71328233544e+14\n",
+      "9.61592067856e+14\n",
+      "9.05276314556e+14\n"
+     ]
+    }
+   ],
    "source": [
-    "# Compute the RSS on TRAINING data for each of the three models and record the values:\n"
+    "# Compute the RSS on TRAINING data for each of the three models and record the values:\n",
+    "rss_model_1_train = get_residual_sum_of_squares(model_1, train_data, train_data['price'])\n",
+    "print rss_model_1_train\n",
+    "\n",
+    "rss_model_2_train = get_residual_sum_of_squares(model_2, train_data, train_data['price'])\n",
+    "print rss_model_2_train\n",
+    "\n",
+    "rss_model_3_train = get_residual_sum_of_squares(model_3, train_data, train_data['price'])\n",
+    "print rss_model_3_train"
    ]
   },
   {
@@ -409,13 +632,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.26568089093e+14\n",
+      "2.24368799994e+14\n",
+      "2.5182931895e+14\n"
+     ]
+    }
+   ],
    "source": [
-    "# Compute the RSS on TESTING data for each of the three models and record the values:\n"
+    "# Compute the RSS on TESTING data for each of the three models and record the values:\n",
+    "rss_model_1_test = get_residual_sum_of_squares(model_1, test_data, test_data['price'])\n",
+    "print rss_model_1_test\n",
+    "\n",
+    "rss_model_2_test = get_residual_sum_of_squares(model_2, test_data, test_data['price'])\n",
+    "print rss_model_2_test\n",
+    "\n",
+    "rss_model_3_test = get_residual_sum_of_squares(model_3, test_data, test_data['price'])\n",
+    "print rss_model_3_test"
    ]
   },
   {
