iPython notebook solution to regression week2 assignment 2

--- a/Specializations/Machine Learning/Regression/Week 2/Assignment 2/week-2-multiple-regression-assignment-2-blank.ipynb
+++ b/Specializations/Machine Learning/Regression/Week 2/Assignment 2/week-2-multiple-regression-assignment-2-blank.ipynb
@@ -67,11 +67,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[INFO] \u001b[1;32m1450011523 : INFO:     (initialize_globals_from_environment:282): Setting configuration variable GRAPHLAB_FILEIO_ALTERNATIVE_SSL_CERT_FILE to /Users/tjaskula/.graphlab/anaconda/lib/python2.7/site-packages/certifi/cacert.pem\n",
-      "\u001b[0m\u001b[1;32m1450011523 : INFO:     (initialize_globals_from_environment:282): Setting configuration variable GRAPHLAB_FILEIO_ALTERNATIVE_SSL_CERT_DIR to \n",
+      "[INFO] \u001b[1;32m1450024492 : INFO:     (initialize_globals_from_environment:282): Setting configuration variable GRAPHLAB_FILEIO_ALTERNATIVE_SSL_CERT_FILE to /Users/tjaskula/.graphlab/anaconda/lib/python2.7/site-packages/certifi/cacert.pem\n",
+      "\u001b[0m\u001b[1;32m1450024492 : INFO:     (initialize_globals_from_environment:282): Setting configuration variable GRAPHLAB_FILEIO_ALTERNATIVE_SSL_CERT_DIR to \n",
       "\u001b[0mThis non-commercial license of GraphLab Create is assigned to thomasv1000@hotmail.fr and will expire on October 12, 2016. For commercial licensing options, visit https://dato.com/buy/.\n",
       "\n",
-      "[INFO] Start server at: ipc:///tmp/graphlab_server-3590 - Server binary: /Users/tjaskula/.graphlab/anaconda/lib/python2.7/site-packages/graphlab/unity_server - Server log: /tmp/graphlab_server_1450011523.log\n",
+      "[INFO] Start server at: ipc:///tmp/graphlab_server-4078 - Server binary: /Users/tjaskula/.graphlab/anaconda/lib/python2.7/site-packages/graphlab/unity_server - Server log: /tmp/graphlab_server_1450024492.log\n",
       "[INFO] GraphLab Server Version: 1.7.1\n"
      ]
     }
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -142,11 +142,11 @@
     "    # add the column 'constant' to the front of the features list so that we can extract it along with the others:\n",
     "    features = ['constant'] + features # this is how you combine two lists\n",
     "    # select the columns of data_SFrame given by the features list into the SFrame features_sframe (now including constant):\n",
-    "\n",
+    "    features_sframe = data_sframe[features]\n",
     "    # the following line will convert the features_SFrame into a numpy matrix:\n",
     "    feature_matrix = features_sframe.to_numpy()\n",
     "    # assign the column of data_sframe associated with the output to the SArray output_sarray\n",
-    "\n",
+    "    output_sarray = data_sframe[output]\n",
     "    # the following will convert the SArray into a numpy array by first converting it to a list\n",
     "    output_array = output_sarray.to_numpy()\n",
     "    return(feature_matrix, output_array)"
@@ -161,11 +161,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  1.00000000e+00   1.18000000e+03]\n",
+      "221900.0\n"
+     ]
+    }
+   ],
    "source": [
     "(example_features, example_output) = get_numpy_data(sales, ['sqft_living'], 'price') # the [] around 'sqft_living' makes it a list\n",
     "print example_features[0,:] # this accesses the first row of the data the ':' indicates 'all columns'\n",
@@ -188,11 +197,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1181.0\n"
+     ]
+    }
+   ],
    "source": [
     "my_weights = np.array([1., 1.]) # the example weights\n",
     "my_features = example_features[0,] # we'll use the first data point\n",
@@ -209,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -218,7 +235,7 @@
     "def predict_output(feature_matrix, weights):\n",
     "    # assume feature_matrix is a numpy matrix containing the features as columns and weights is a corresponding numpy array\n",
     "    # create the predictions vector by using np.dot()\n",
-    "\n",
+    "    predictions = np.dot(feature_matrix, weights)\n",
     "    return(predictions)"
    ]
   },
@@ -231,11 +248,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1181.0\n",
+      "2571.0\n"
+     ]
+    }
+   ],
    "source": [
     "test_predictions = predict_output(example_features, my_weights)\n",
     "print test_predictions[0] # should be 1181.0\n",
@@ -276,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -285,7 +311,7 @@
     "def feature_derivative(errors, feature):\n",
     "    # Assume that errors and feature are both numpy arrays of the same length (number of data points)\n",
     "    # compute twice the dot product of these vectors as 'derivative' and return the value\n",
-    "\n",
+    "    derivative = 2*np.dot(errors, feature)\n",
     "    return(derivative)"
    ]
   },
@@ -298,11 +324,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-23345850022.0\n",
+      "-23345850022.0\n"
+     ]
+    }
+   ],
    "source": [
     "(example_features, example_output) = get_numpy_data(sales, ['sqft_living'], 'price') \n",
     "my_weights = np.array([0., 0.]) # this makes all the predictions 0\n",
@@ -335,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -346,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
@@ -357,19 +392,19 @@
     "    weights = np.array(initial_weights) # make sure it's a numpy array\n",
     "    while not converged:\n",
     "        # compute the predictions based on feature_matrix and weights using your predict_output() function\n",
-    "\n",
+    "        predictions = predict_output(feature_matrix, weights)\n",
     "        # compute the errors as predictions - output\n",
-    "\n",
+    "        errors = predictions - output\n",
     "        gradient_sum_squares = 0 # initialize the gradient sum of squares\n",
     "        # while we haven't reached the tolerance yet, update each feature's weight\n",
     "        for i in range(len(weights)): # loop over each weight\n",
     "            # Recall that feature_matrix[:, i] is the feature column associated with weights[i]\n",
     "            # compute the derivative for weight[i]:\n",
-    "\n",
+    "            derivative = feature_derivative(errors, feature_matrix[:,i])\n",
     "            # add the squared value of the derivative to the gradient magnitude (for assessing convergence)\n",
-    "\n",
+    "            gradient_sum_squares = sqrt(gradient_sum_squares) + (derivative * derivative)\n",
     "            # subtract the step size times the derivative from the current weight\n",
-    "            \n",
+    "            weights[i] = weights[i] - (step_size * derivative)\n",
     "        # compute the square-root of the gradient sum of squares to get the gradient matnigude:\n",
     "        gradient_magnitude = sqrt(gradient_sum_squares)\n",
     "        if gradient_magnitude < tolerance:\n",
@@ -402,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {
     "collapsed": true
    },
@@ -420,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false
    },
@@ -444,12 +479,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-46999.88716555    281.91211912]\n",
+      "281.9\n"
+     ]
+    }
+   ],
+   "source": [
+    "simple_weights = regression_gradient_descent(simple_feature_matrix, output, initial_weights, step_size, tolerance)\n",
+    "print simple_weights\n",
+    "print round(simple_weights[1], 1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -469,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
@@ -487,12 +535,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "simple_predictions = predict_output(test_simple_feature_matrix, simple_weights)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -503,12 +553,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "356134.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print round(simple_predictions[0])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -519,12 +579,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.75400047593e+14\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_errors = simple_predictions - test_output\n",
+    "RSS = sum(test_errors * test_errors)\n",
+    "print RSS"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -542,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {
     "collapsed": false
    },
@@ -565,12 +637,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ -9.99999688e+04   2.45035462e+02   6.53198581e+01]\n"
+     ]
+    }
+   ],
+   "source": [
+    "multiple_weights = regression_gradient_descent(feature_matrix, output, initial_weights, step_size, tolerance)\n",
+    "print multiple_weights"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -581,12 +664,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "(test_multiple_feature_matrix, test_output) = get_numpy_data(test_data, model_features, my_output)\n",
+    "multiple_predictions = predict_output(test_multiple_feature_matrix, multiple_weights)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -597,12 +683,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "366670.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print round(multiple_predictions[0])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -613,12 +709,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "310000.0"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_data['price'][0]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -636,18 +745,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.70261662856e+14\n"
+     ]
+    }
+   ],
+   "source": [
+    "multiple_test_errors = multiple_predictions - test_output\n",
+    "RSSm = sum(multiple_test_errors * multiple_test_errors)\n",
+    "print RSSm"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "**Quiz Question: Which model (1 or 2) has lowest RSS on all of the TEST data? **"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "RSS < RSSm"
    ]
   },
   {
