Fixing the right solution for Regression assignment 2 in week 2

--- a/Specializations/Machine Learning/Regression/Week 2/Assignment 2/week-2-multiple-regression-assignment-2-blank.ipynb
+++ b/Specializations/Machine Learning/Regression/Week 2/Assignment 2/week-2-multiple-regression-assignment-2-blank.ipynb
@@ -67,11 +67,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[INFO] \u001b[1;32m1450024492 : INFO:     (initialize_globals_from_environment:282): Setting configuration variable GRAPHLAB_FILEIO_ALTERNATIVE_SSL_CERT_FILE to /Users/tjaskula/.graphlab/anaconda/lib/python2.7/site-packages/certifi/cacert.pem\n",
-      "\u001b[0m\u001b[1;32m1450024492 : INFO:     (initialize_globals_from_environment:282): Setting configuration variable GRAPHLAB_FILEIO_ALTERNATIVE_SSL_CERT_DIR to \n",
+      "[INFO] \u001b[1;32m1450055937 : INFO:     (initialize_globals_from_environment:282): Setting configuration variable GRAPHLAB_FILEIO_ALTERNATIVE_SSL_CERT_FILE to /Users/tjaskula/.graphlab/anaconda/lib/python2.7/site-packages/certifi/cacert.pem\n",
+      "\u001b[0m\u001b[1;32m1450055937 : INFO:     (initialize_globals_from_environment:282): Setting configuration variable GRAPHLAB_FILEIO_ALTERNATIVE_SSL_CERT_DIR to \n",
       "\u001b[0mThis non-commercial license of GraphLab Create is assigned to thomasv1000@hotmail.fr and will expire on October 12, 2016. For commercial licensing options, visit https://dato.com/buy/.\n",
       "\n",
-      "[INFO] Start server at: ipc:///tmp/graphlab_server-4078 - Server binary: /Users/tjaskula/.graphlab/anaconda/lib/python2.7/site-packages/graphlab/unity_server - Server log: /tmp/graphlab_server_1450024492.log\n",
+      "[INFO] Start server at: ipc:///tmp/graphlab_server-5653 - Server binary: /Users/tjaskula/.graphlab/anaconda/lib/python2.7/site-packages/graphlab/unity_server - Server log: /tmp/graphlab_server_1450055937.log\n",
       "[INFO] GraphLab Server Version: 1.7.1\n"
      ]
     }
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -402,7 +402,7 @@
     "            # compute the derivative for weight[i]:\n",
     "            derivative = feature_derivative(errors, feature_matrix[:,i])\n",
     "            # add the squared value of the derivative to the gradient magnitude (for assessing convergence)\n",
-    "            gradient_sum_squares = sqrt(gradient_sum_squares) + (derivative * derivative)\n",
+    "            gradient_sum_squares = gradient_sum_squares + (derivative * derivative)\n",
     "            # subtract the step size times the derivative from the current weight\n",
     "            weights[i] = weights[i] - (step_size * derivative)\n",
     "        # compute the square-root of the gradient sum of squares to get the gradient matnigude:\n",
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -646,7 +646,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ -9.99999688e+04   2.45035462e+02   6.53198581e+01]\n"
+      "[ -9.99999688e+04   2.45072603e+02   6.52795277e+01]\n"
      ]
     }
    ],
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -692,7 +692,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "366670.0\n"
+      "366651.0\n"
      ]
     }
    ],
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -720,7 +720,7 @@
        "310000.0"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -754,7 +754,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.70261662856e+14\n"
+      "2.70263446465e+14\n"
      ]
     }
    ],
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -784,7 +784,7 @@
        "False"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
