--- a/Specializations/Machine Learning/Regression/Week 3/Assignment 1/week-3-polynomial-regression-assignment-blank.ipynb
+++ b/Specializations/Machine Learning/Regression/Week 3/Assignment 1/week-3-polynomial-regression-assignment-blank.ipynb
@@ -51,11 +51,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[INFO] \u001b[1;32m1450392332 : INFO:     (initialize_globals_from_environment:282): Setting configuration variable GRAPHLAB_FILEIO_ALTERNATIVE_SSL_CERT_FILE to /Users/tjaskula/.graphlab/anaconda/lib/python2.7/site-packages/certifi/cacert.pem\n",
+      "\u001b[0m\u001b[1;32m1450392332 : INFO:     (initialize_globals_from_environment:282): Setting configuration variable GRAPHLAB_FILEIO_ALTERNATIVE_SSL_CERT_DIR to \n",
+      "\u001b[0mThis non-commercial license of GraphLab Create is assigned to thomasv1000@hotmail.fr and will expire on October 12, 2016. For commercial licensing options, visit https://dato.com/buy/.\n",
+      "\n",
+      "[INFO] Start server at: ipc:///tmp/graphlab_server-12712 - Server binary: /Users/tjaskula/.graphlab/anaconda/lib/python2.7/site-packages/graphlab/unity_server - Server log: /tmp/graphlab_server_1450392332.log\n",
+      "[INFO] GraphLab Server Version: 1.7.1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.0, 2.0, 3.0]\n",
+      "[1.0, 8.0, 27.0]\n"
+     ]
+    }
+   ],
    "source": [
     "tmp = graphlab.SArray([1., 2., 3.])\n",
     "tmp_cubed = tmp.apply(lambda x: x**3)\n",
